--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -33,7 +33,7 @@ a:hover{
     position: fixed;
     top: 0;
     overflow-x: hidden;
-    z-index: 999999999;
+    z-index: 99;
 }
 .h-bg-1{
     width: 100%;
@@ -557,6 +557,7 @@ button.search-button svg{
     object-fit: cover;
 }
 .absolute-position{
+    padding-right: 0;
     position: absolute;
     right: 0;
     top: 50%;
