--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -25,6 +25,19 @@ a:hover{
 }
 
 
+/* ScrollBar */
+/* ::-webkit-scrollbar {
+    width: 2px;
+} 
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px #BBBBBB; 
+    background: none;
+}
+::-webkit-scrollbar-thumb {
+    background: gray; 
+    border-radius: 5px;
+} */
+/* ScrollBar */
 
 .header{
     width: 100%;
@@ -637,7 +650,7 @@ button.search-button svg{
     overflow: hidden;
 }
 .popular-product-img img{
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
 }
 .popular-product-text{
@@ -722,14 +735,19 @@ button.search-button svg{
 }
 .news-text-box .time{
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 24px;
     align-items: center;
 }
-.news-text-box .time span:first-child{
-    font-size: 50px;
+.news-text-box .time span{
+    font-size: 30px;
     font-weight: 400;
     color: #1B1B1B;
     margin-right: 12px;
+    font-family: 'Heebo';
+    line-height: 54px;
+}
+.news-text-box .time span:first-child{
+    font-size: 50px;
 }
 .news-text-box h2{
     font-size: var(--title-font-2);
