--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -20,6 +20,8 @@
     --person-contact-link: 18px;
     --contact-font-number: 16px;
     --contact-input-font: 16px;
+    --c-components-title: 18px;
+    --c-components-text: 16px;
 }
 
 a{
@@ -2191,3 +2193,196 @@ footer{
     margin-bottom: 30px;
 }
 /* Contact */
+
+/* Products-det */
+.tab-img-products{
+    height: 432px;
+    width: 100%;
+    position: relative;
+    border-radius: 8px;
+}
+.tab-img-products a{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    
+}
+.tab-img-products a img{
+    width: 100%;
+    height: 100%;
+}
+ .tab-img-box-position{
+    position: absolute;
+    bottom: 15px;
+    display: flex;
+    align-items: center;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+ }
+ .tab-img-item{
+     width: 80px;
+     height: 80px;
+     border-radius: 4px;
+     border: 4px solid #fff; 
+     cursor: pointer;
+     transition: 0.4s;
+ }
+ .tab-img-item:nth-child(2){
+     margin: 0 20px;
+ }
+ .tab-img-item:hover{
+     border: 4px solid  #E3662A;
+ }
+ .tab-img-item img{
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+     border-radius: 4px;
+ }
+ .tab-zoom{
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     background-color: #fff;
+     border-radius: 5px;
+     position: absolute;
+     top: 20px;
+     right: 20px;
+     width: 44px;
+     height: 44px;
+     cursor: pointer;
+     pointer-events: none;
+ }
+ .container-components-box{
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     padding-left: 46px;
+ }
+ .container-name{
+    font-size: var(--title-font);
+    color: #1B1B1B;
+    font-weight: bold;
+    line-height: 32px;
+    font-family: 'Heebo';
+    margin-bottom: 20px;
+ }
+ .cont-snt{
+     font-size: var(--c-components-text);
+     font-family: 'Heebo';
+     color: #FFFFFF;
+     font-weight: 600;
+     line-height: 24px;
+     padding: 15px 64px 15px 20px;
+     background: #3A7BB7;
+     width: fit-content;
+     clip-path: polygon(0 0, 90% 0, 100% 100%, 0% 100%);
+     margin-bottom: 25px;
+ }
+ .container-description h3{
+    font-size: var(--text-font);
+    font-family: 'Heebo';
+    font-weight: bold;
+    line-height: 27px;
+    color: #1B1B1B;
+    margin-bottom: 10px;
+ }
+ .container-description .text{
+     max-width: 881px;
+     max-height: 56px;
+     overflow: hidden;
+     font-size: var(--c-components-text);
+     font-family: 'Heebo';
+     color: #1B1B1B;
+     line-height: 30px;
+     margin-bottom: 25px;
+ }
+ .container-components {
+     display: flex;
+     align-items: flex-start;
+     gap: 100px;
+ }
+ .c-c-t h5{
+    margin-bottom: 19px;
+    line-height: 27px;
+    font-size: var(--text-font);
+    font-weight: bold;
+    font-family: 'Heebo';
+    color: #1B1B1B;
+ }
+ .weight{
+     display: flex;
+     flex-direction: column;
+     padding-right: 25px;
+     max-height: 97px;
+     overflow-y: auto;
+     gap: 8px;
+ }
+ .c-c-t div span:nth-child(2){
+     font-size: var(--text-font);
+     font-family: 'Heebo';
+     color: #1B1B1B;
+     line-height: 27px;
+     margin-left: 15px;
+ }
+ .c-m-q h5 span{
+     margin-left: 25px;
+     font-weight: 400;
+ }
+ .weight::-webkit-scrollbar {
+    width: 2px;
+  
+  }
+  
+  /* Track */
+  .weight::-webkit-scrollbar-track {
+    background: #EEEEEE;
+  
+  }
+  
+  /* Handle */
+  .weight::-webkit-scrollbar-thumb {
+    background: #3A7BB7;
+    
+  }
+  .c-slider-item{
+      width: 100%;
+      height: 295px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      
+  }
+  .c-slider-item img{
+      width: 100%;
+      height: 251px;
+      object-fit: cover;
+      border-radius: 8px;
+  }
+  .c-slider-item h2{
+      font-size: var(--c-components-text);
+      line-height: 24px;
+      margin-top: 20px;
+      color: #1B1B1B;
+      font-family: 'Heebo';
+      font-weight: bold;
+  }
+  .containers-slider{
+      margin-bottom: 40px;
+  }
+  .slider-arrows  .last-li,
+  .slider-arrows .last-li a span {
+      margin-right: 0;
+  }
+  .containers-slider .slick-slide {
+    margin-left:30px!important;
+  }
+
+  /* the parent */
+  .containers-slider .slick-list {
+    margin-left:-30px!important;
+  }
+  
+ 
+/* Products-det */
