--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2372,14 +2372,217 @@ footer{
   .slider-arrows .last-li a span {
       margin-right: 0;
   }
+  /* SLIDER margin */
   .containers-slider .slick-slide {
     margin-left:30px!important;
   }
-
-  /* the parent */
   .containers-slider .slick-list {
     margin-left:-30px!important;
   }
-  
- 
+  /* SLIDER margin */
 /* Products-det */
+/* Products */
+.products-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.products-container .form-box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.product-search-result h2{
+    font-size: var(--title-font-2);
+    line-height: 29px;
+    font-weight: bold;
+    color: #1B1B1B;
+    margin-bottom: 10px;
+    font-family: 'Heebo';
+}
+.product-search-result h4{
+    font-size: 14px;
+    line-height: 21px;
+    margin-bottom: 25px;
+    font-family: 'Heebo';
+    color: #1B1B1B;
+}
+.form-box form{
+    width: 297px;
+    position: relative;
+    margin-top: -21px;
+}
+.form-box form input{
+    /* position: absolute; */
+    width: 100%;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    color: #4D4D4D;
+    line-height: 24px;
+    font-family: 'Heebo';
+    padding-bottom: 10px;
+    border-bottom: 1.5px solid #4D4D4D;
+}
+.form-box form button{
+    border: none;
+    outline: none;
+    background-color: transparent;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 3px;
+}
+.form-box form button svg path{
+    stroke: #F16922;
+}
+.products-list{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px 30px;
+    
+}
+.product-list-item{
+    width: calc((100% / 4) - 23px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.product-list-item h3{
+    font-size: 19px;
+    color: #1B1B1B;
+    line-height: 28px;
+    font-family: 'Heebo';
+    margin-top: 20px;
+    font-weight: bold;
+}
+.list-img{
+    width: 100%;
+    height: 294px;
+    border-radius: 8px;
+    position: relative;
+}
+.list-img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    object-fit: cover;
+}
+.list-img .photo-hover{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s;
+    transform: scaleY(0);
+    border-radius: 8px; 
+}
+.list-img .photo-hover .text{
+    max-height: 111px;
+    overflow: hidden;
+    color: #FFFFFF;
+    font-size: var(--text-font);
+    font-weight: 500;
+    line-height: 28px;
+    font-family: 'Heebo';
+    padding: 0 40px;
+}
+ 
+.product-list-item:hover .photo-hover{
+    transform: scaleY(1);
+}
+
+.select-categories-box{
+    width: 100%;
+    padding-right: 50px;
+}
+.select-categories-box h2{
+    font-size: var(--text-font);
+    font-weight: bold;
+    line-height: 28px;
+    font-family: 'Heebo';
+    color: #1B1B1B;
+    margin-bottom: 25px;
+}
+.categories-list{
+    width: 100%;
+}
+.list-ul{
+    width: 100%;
+    padding-left: 0;
+}
+.list-ul .list-li{
+    max-height: 27px;
+    overflow: hidden;
+    transition: 0.4s;
+    margin-bottom: 20px;
+    width: 100%;
+}
+ 
+.list-ul li a{
+    display: inline-block;
+    font-size: 18px;
+    line-height: 27px;
+    color: #1B1B1B;
+    text-transform: capitalize;
+    transition: 0.4s;
+    font-family: 'Heebo';
+}
+.list-ul li span{
+    display: inline-block;
+    float: right;
+    transform: rotate(-90deg);
+    margin-right: 30px;
+    cursor: pointer;
+    padding: 3px;
+    transition: 0.3s;
+}
+.list-ul li span svg{
+    transition: 0.3s;
+}
+.list-ul li span svg path{
+    stroke: gray;
+}
+.list-ul li.opened{
+    max-height: 800px;
+}
+.list-ul li.opened > span svg{
+    transform: rotate(180deg);
+}
+.list-ul li.opened > span svg path{
+    stroke: #1B1B1B;
+}
+.list-ul li.opened > a{
+    font-weight: bold;
+}
+.child-ul li{
+    width: 100%;
+    max-height: 47px;
+    overflow: hidden;
+    transition: 0.3s;
+    /* margin-bottom: 20px; */
+}
+ 
+.child-ul li a{
+    padding-top: 20px;
+}
+.child-ul{
+    padding-left: 20px;
+}
+.child-ul li span{
+    padding: 3px;
+    margin-top: 17px;
+    margin-right: 30px;
+}
+.child-ul li:last-child{
+    margin-bottom: 0;
+}
+ 
+/* Products */
