--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -238,8 +238,14 @@ header{
     color: #E3662A;
     transition: 0.3s;
 }
-.social-links li a span:hover{
-    color: #1860A2;
+.social-links li:first-child a span:hover{
+    color: #3B5998;
+}
+.social-links li:nth-child(2) a span:hover{
+    color: #1DA1F2;
+}
+.social-links li:nth-child(3) a span:hover{
+    color: #DD2A7B;
 }
 .bottom-navbar ul{
     display: flex;
@@ -265,14 +271,13 @@ header{
 .bottom-navbar ul li a{
     font-size: var(--nav-links-font);
     font-weight: bold;
-    text-transform: uppercase;
+    text-transform: capitalize;
     color: #F8AD89;
     transition: 0.3s;
     font-family: 'Lato';
     line-height: 19px;
-    /* padding-bottom: 15px; */
 }
-.bottom-navbar ul li a:hover{
+.bottom-navbar ul li:hover a {
     color: #fff;
 }
 .bottom-navbar ul li.colored a{
@@ -348,7 +353,7 @@ header{
 }
 .bottom-navbar ul li .sub-menu .sub-menu-links a{
     white-space: nowrap;
-    padding: 20px 55px;
+    padding: 20px 56px;
     width: 100%;
     text-align: center;
     border-bottom: 1px solid #F1F1F1;
@@ -545,11 +550,11 @@ main{
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     flex-wrap: wrap;
+    gap: 0 26px;
 }
 .p-item{
-    width: calc(( 100% / 5) - 20px);
+    width: calc(( 100% - 104px) / 5);
     height: 388px;
     margin-bottom: 26px;
     border-radius: 8px;
@@ -557,9 +562,9 @@ main{
     position: relative;
     transition: 0.4s;
 }
-.p-item:hover{
+/* .p-item:hover{
     box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.3);
-}
+} */
 .front-item{
     width: 100%;
     height: 100%;
@@ -669,7 +674,7 @@ main{
     width: 0%;
     left: -7%;
     bottom: 0;
-    background:#1860A2;
+    background:#1B1B1B;
     transition: 0.4s;
 }
 .see-all-link:hover::before{
@@ -938,7 +943,7 @@ footer{
     left: 0;
     top: -1px;
     width: 75%;
-    height: 82.3%;
+    height: 82.5%;
     background: #fff;
     clip-path:polygon(0 0, 99% 0, 80% 100%, 0% 100%);
     /* z-index: 2; */
@@ -1061,6 +1066,22 @@ footer{
     font-weight: bold;
     line-height: 27px;
     font-family: 'Heebo';
+    transition: 0.3s;
+    position: relative;
+    padding-bottom: 2px;
+}
+.footer-links ul li a::after{
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 2px;
+    background-color: #fff;
+    bottom: 0;
+    left: 0;
+    transition: 0.3s;
+}
+.footer-links ul li a:hover::after{
+    width: 100%;
 }
 .footer-socials {
     margin-top: 25px;
@@ -1128,16 +1149,10 @@ footer{
 }
 .about-page-share-icons .share-icons a span{
     font-size: 20px;
-}
-.about-page-share-icons .share-icons a:nth-child(3n-2) span{
-    color: #1860A2;
-}
-.about-page-share-icons .share-icons a:nth-child(2n) span{
     color: #E3662A;
+    transition: 0.3s;
 }
-.about-page-share-icons .share-icons a:nth-child(3n) span{
-    color: #1860A2;
-}
+ 
 .about-page-img-gallery{
     margin-top: 60px;
     width: 100%;
@@ -1250,6 +1265,7 @@ footer{
 .m-b-2 .news-text-box{
     padding-left: 0;
     padding: 0 30px;
+    padding-right: 9%;
 }
 .m-b-2:nth-child(2n - 1){
     padding-top: 200px;
@@ -1271,7 +1287,7 @@ footer{
     border-radius: 0 8px 0 0;
 }
 .m-b-2:nth-child(2n - 1)::before{
-    width: 25.4%;
+    width: 29.3%;
     right: 0;
     height: 143px;
     border-radius: 8px 0 0 0;
@@ -1291,11 +1307,12 @@ footer{
     padding: 0;
 }
  
-.pagination ul li:last-child,
 .pagination ul li:first-child{
     margin: 0 16px;
 }
-
+.pagination ul li:last-child{
+    margin-left: 16px;
+}
 .pagination ul li:last-child a,
 .pagination ul li:first-child a{
     font-size: 13px;
@@ -1360,12 +1377,21 @@ footer{
     font-weight: bold;
     font-family: "Heebo";
     cursor: pointer;
+    transition: 0.3s;
 }
 .slider-arrows li a span svg{
     width: 40px;
+    transition: 0.3s;
 }
 .slider-arrows li a span svg path{
     stroke: #1B1B1B; 
+    transition: 0.3s;
+}
+.slider-arrows li a:hover span svg path{
+   stroke: #E3662A;
+}
+.slider-arrows li a:hover{
+    color: #E3662A;
 }
 .slider-arrows li a span{
     margin: 0 20px
@@ -1385,15 +1411,17 @@ footer{
 }
 .det-socials .share-icons a span{
     font-size: 30px;
-}
- .share-icons a:nth-child(3n-2) span{
-    color: #1860A2;
-}
- .share-icons a:nth-child(2n) span{
     color: #E3662A;
+    transition: 0.3s;
 }
- .share-icons a:nth-child(3n) span{
-    color: #1860A2;
+.share-icons a:nth-child(3n-2) span:hover{
+    color: #3B5998;
+}
+.share-icons a:nth-child(2n):hover span{
+    color: #1DA1F2;
+}
+.share-icons a:nth-child(3n):hover span{
+    color: #DD2A7B;
 }
 .det-socials .share-icons a{
     margin-right: 30px;
@@ -1710,20 +1738,20 @@ footer{
 }
 .photo-box{
     display: flex;
-    gap: 0 24px;
+    gap: 0 30px;
     flex-wrap: wrap;
     width: 100%;
 }
 .photo-box a{
-    width: calc((100% / 6) - 24px);
+    width: calc((100% - 150px) / 6);
     position: relative;
     height: 252px;
     transition: 0.3s;
     overflow: hidden;
-    margin-bottom: 24px;
+    margin-bottom: 30px;
 }
 .photo-box a:nth-child(2n){
-    margin-top: 24px;
+    margin-top: 30px;
     margin-bottom: 0;
 }
 .photo-box a img{
@@ -2002,20 +2030,20 @@ footer{
     content: "";
     clip-path: polygon(0 0, 0% 100%, 100% 0);
     width: 111px;
-    height: 100px;
+    height: 101px;
     background: #fff;
-    top: 0;
-    left: -1px;
+    top: -1px;
+    left: -2px;
 }
 .contact-right-side:before{
     position: absolute;
     content: "";
     clip-path: polygon(0 0, 0% 100%, 100% 0);
     width: 111px;
-    height: 100px;
+    height: 101px;
     background: #fff;
-    bottom: 0;
-    right: 0;
+    bottom: -1px;
+    right: -1px;
     transform: rotate(180deg);
 }
 .ph-ad{
@@ -2532,8 +2560,11 @@ footer{
     line-height: 27px;
     color: #1B1B1B;
     text-transform: capitalize;
-    transition: 0.4s;
+    transition: 0.3s;
     font-family: 'Heebo';
+}
+.list-ul li a:hover{
+    font-weight: bold;
 }
 .list-ul li span{
     display: inline-block;
@@ -2548,7 +2579,7 @@ footer{
     transition: 0.3s;
 }
 .list-ul li span svg path{
-    stroke: gray;
+    stroke: rgb(226, 217, 217);
 }
 .list-ul li.opened{
     max-height: 800px;
@@ -2584,5 +2615,8 @@ footer{
 .child-ul li:last-child{
     margin-bottom: 0;
 }
- 
+ .hr2{
+     width: 91%;
+     margin-bottom: 25px;
+ }
 /* Products */
