--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1835,9 +1835,9 @@ footer{
 .video-item a:hover .img-box svg path{
    fill: #f00;
 }
-.video-item a:hover .img-box{
+/* .video-item a:hover .img-box{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-}
+} */
  
 .video-item a .text-side{
     width: 100%;
